# miniRT

./: .gitignore  Makefile  config.c  config_check.c  config_debug.c  error.c  load_a.c  load_c.c  load_cy.c  load_l.c  load_pl.c  load_sp.c  main.c  main.h  scan_color.c  scan_coord.c  vector.c
libft/: CMakeLists.txt  Doxyfile  Makefile  ft_abs.c  ft_abspath_of_cmd.c  ft_append.c  ft_atod.c  ft_atoi.c  ft_atoi_ex.c  ft_atoui.c  ft_atoui_ex.c  ft_basename.c  ft_bsort.c  ft_calloc.c  ft_chrstr.c  ft_count_arr.c  ft_crash.c  ft_del.c  ft_del_arr.c  ft_dirname.c  ft_dtoa.c  ft_endswith.c  ft_env_var.c  ft_fibonacci.c  ft_file_directory.c  ft_file_executable.c  ft_file_exists.c  ft_file_readable.c  ft_file_writable.c  ft_fork.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  (+55 more)
libft/arr/: Makefile  ft_arr.h  ft_arr_adapt.c  ft_arr_append.c  ft_arr_del.c  ft_arr_empty.c  ft_arr_fini.c  ft_arr_get.c  ft_arr_init.c  ft_arr_insert.c  ft_arr_new.c  ft_arr_reserve.c  ft_arr_set.c  ft_str_append.c  ft_str_data.c  ft_str_del.c  ft_str_fini.c  ft_str_init.c  ft_str_insert.c  ft_str_len.c  ft_str_new.c  ft_str_prepend.c
libft/gnl/: Makefile
libft/printf/: Makefile  printdouble.c  printint.c  printint2.c  printpercent.c  printpointer.c  printuintdec.c  printuintdec2.c  printuinthex2.c  printuinthexx2.c  printuintoct.c  printuintoct2.c  printuintsz.c
scenes/: scene_00.rt
